force-app/main/default/objects/pca_Pet__c/pca_Pet__c.object-meta.xml
<CustomObject>
    <description>Pet tracking object</description>
    <label>Pet</label>
    <nameField>
        <label>Pet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>