force-app/main/default/objects/pca_Pet__c/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <description>Date of pet&apos;s birth</description>
    <label>Birthday</label>
    <type>Date</type>
</CustomField>