force-app/main/default/objects/pca_Pet__c/fields/Breed__c.field-meta.xml
<CustomField>
    <fullName>Breed__c</fullName>
    <description>Breed of pet</description>
    <label>Breed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airedale Terrier</fullName>
            </value>
            <value>
                <fullName>Lakeland Terrier</fullName>
            </value>
            <value>
                <fullName>Mix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>